# poetry-demo-fastapi

./: main.py  pyproject.toml
