[tool.poetry]
name = "poetry-demo-fastapi"
version = "0.1.0"
description = ""
authors = ["Asia Lie <asia.lie@softwire.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
